# tm4spam

./: .gitignore  LICENSE  README.md  pyproject.toml
models/: logistic_model.pkl
models/bertopic_model/: topic_embeddings.safetensors  topics.json
notebooks/: classfication.ipynb  classification.ipynb  classification_bert.ipynb  compare_classification.ipynb  preprocessing.ipynb  topic_modeling.ipynb
src/: preprocessing.py  setup_nltk.py
