[project]
name = "tm4scam"
version = "0.1.0"
description = "Text mining project for scam and spam classification and topic modeling"
authors = [
    {name = "keitaVigano",email = "keitainter@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
